# Secure_and_Dependable_Systems

./: .gitignore  README.md
HW1/: CMakeLists.txt  README.txt  main.c
HW1/doc/: CMakeLists.txt  Doxyfile.in
HW1/src/: CMakeLists.txt  rpn-stack.c  rpn-stack.h  rpn.c  rpn.h
HW1/test/: CMakeLists.txt  check-rpn.c  check-stack.c
HW2/: HW2.tex
HW3/: HW3.tex
HW4/: CMakeLists.txt
HW4/src/: CMakeLists.txt  main.c  scrypt.c  scrypt.h
HW4/test/: CMakeLists.txt  check-scrypt.c
HW5/: ca.csr  cert.crt  public_key.key  request.csr
HW6/: CMakeLists.txt  README.md
HW6/doc/: CMakeLists.txt  Doxyfile.in
HW6/src/: CMakeLists.txt  hide.c  hide.h  image.c  image.h  pnmhide.c
HW6/test/: check.sh
